# agent-01

./: .gitignore  README.md  l402.ipynb  main.py  pyproject.toml  requirements.txt  settings.ini
ant/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
static/js/: script.js
templates/: index.html
