[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fewsats-ant"
version = "0.0.1"
description = "Agent-01 tools for AI"
authors = [
    {name = "Pol Alvarez", email = "pol@fewsats.com"},
    {name = "Jordi Montes Sanabria", email = "jordi@fewsats.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.7"
dependencies = [
    "flask",
    "l402",
    "cosette",
    "toolslm",
]

[project.urls]
Homepage = "https://github.com/Fewsats/ant"
Documentation = "https://Fewsats.github.io/ant"
Repository = "https://github.com/Fewsats/ant.git"

[tool.setuptools]
packages = ["ant"]
